--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,6 +31,7 @@
     font-size: 1.5em;
     color: firebrick;
     font-weight: bolder;
+ 
 
 
 
@@ -53,17 +54,20 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+   
 
 }
 
 
 .first_text{
     height: 30vh;
-    width: 70%;
+    width: 80%;
     font-size: 1.1em;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    /* border: 1px solid red; */
+    padding: 7px;
 }
 
 .home_table{
@@ -85,6 +89,7 @@
     justify-content: center;
     color: firebrick;
     font-weight: bolder;
+  
 }
 
 .home_table .table_WH{
@@ -140,6 +145,7 @@
     align-items: center;
     justify-content: space-around;
     font-size: 1em;
+    /* border: 1px solid red; */
   
 
 
@@ -155,12 +161,13 @@
 
         .first_text{
             height: 35vh;
-            width: 70%;
+            width: 80%;
  
             font-size: 1em;
             display: flex;
             align-items: center;
             justify-content: space-around;
+            padding: 7px;
         }
         .table_headline{
             width: 70%;
@@ -199,11 +206,11 @@
 .second_text_main{
 
     height: 45vh;
-    width: 80%;
+    width: 85%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: .9em;
+    font-size: 1em;
   
 
 
@@ -240,13 +247,14 @@
 
         .home_headline{
             height: 15vh;
-            width: 100%;
+            width: 95%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.1em;
+            font-size: 1.2em;
             color: firebrick;
             font-weight: bolder;
+            text-align: center;
         
         
         
@@ -264,8 +272,8 @@
 
         .first_text{
             height: 35vh;
-            width: 80%;
-            font-size: .9em;
+            width: 90%;
+            font-size: 1em;
             display: flex;
             align-items: center;
             justify-content: space-around;
@@ -330,11 +338,11 @@
 .second_text_main{
 
     height: 45vh;
-    width: 80%;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: .8em;
+    font-size: .9em;
   
 
 
@@ -360,11 +368,11 @@
     @media only screen and (max-width: 567px) {
         .home_headline{
             height: 15vh;
-            width: 100%;
+            width: 95%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: .9em;
+            font-size: 1em;
             color: firebrick;
             font-weight: bolder;
         
@@ -384,8 +392,8 @@
         
         .first_text{
             height: 35vh;
-            width: 85%;
-            font-size: .8em;
+            width: 95%;
+            font-size: .9em;
             display: flex;
             align-items: center;
             justify-content: space-around;
@@ -417,12 +425,13 @@
         
                
 .second_text{
-    width: 100%;
-    height: 50vh;
+    width:95%;
+    height: 55vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    
 }
 .second_text_headline{
     height: 10vh;
@@ -439,12 +448,12 @@
 
 .second_text_main{
 
-    height: 40vh;
-    width: 85%;
+    height: 45vh;
+    width: 95%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: .7em;
+    font-size: .9em;
   
 
 
@@ -463,13 +472,34 @@
 
 
       @media only screen and (max-width: 465px) {
+        .home{
+            height: 320vh;
+            width: 100%;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            font-family: 'Oswald', sans-serif;
+            font-family: 'Raleway', sans-serif;
+            font-family: 'Roboto Mono', monospace;
+            font-family: 'Work Sans', sans-serif;
+            cursor: pointer;
+        
+        
+         
+        
+        
+        }
+
+
         .home_headline{
             height: 15vh;
-            width: 100%;
+            width: 95%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: .8em;
+            font-size: 1em;
             color: firebrick;
             font-weight: bolder;
         
@@ -478,12 +508,13 @@
         }
 
         .first_text{
-            height: 35vh;
-            width: 85%;
-            font-size: .7em;
+            height: 45vh;
+            width: 95%;
+            font-size: .9em;
             display: flex;
             align-items: center;
             justify-content: space-around;
+            padding: 7px;
         }
 
    
@@ -522,12 +553,13 @@
 
         .second_text_main{
 
-            height: 40vh;
-            width: 85%;
+            height: 50vh;
+            width: 95%;
             display: flex;
             align-items: center;
             justify-content: space-around;
-            font-size: .65em;
+            font-size: .9em;
+            
           
         
         
@@ -545,16 +577,26 @@
       @media only screen and (max-width: 413px) {
         .home_headline{
             height: 15vh;
-            width: 100%;
+            width: 95%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: .63em;
+            font-size: 1em;
             color: firebrick;
             font-weight: bolder;
         
         
         
+        }
+
+        .first_text{
+            height: 45vh;
+            width: 95%;
+            font-size: .9em;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            padding: 7px;
         }
 
 
@@ -577,11 +619,56 @@
 
         
         }
+
+        .second_text_main{
+
+            height: 50vh;
+            width: 95%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            font-size: .8em;
+            
+          
+        
+        
+        }
+        
         
         
 
 
     
       }
+
+
+
+      @media only screen and (max-width: 413px) {
+        .home_headline{
+            height: 15vh;
+            width: 95%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1em;
+            color: firebrick;
+            font-weight: bolder;
+            padding: 7px;
+        
+        
+        
+        }
+
+        .first_text{
+            height: 45vh;
+            width: 95%;
+            font-size: .9em;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            padding: 7px;
+        }
+
+    }
 
 
