--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
-html,
-body {
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Righteous', cursive;
+ 
 }
 
 a {
